implemented FileUploadController.php and FileDownloadController.php base security, implemented FileUploadEvent.php

--- a/Resources/config/controller.yaml
+++ b/Resources/config/controller.yaml
@@ -1,6 +1,7 @@
 services:
     _defaults:
         public: true
+        autowire: true
 
     cdn_bundle.controller.file_upload:
         class: BastSys\CdnBundle\Controller\FileUploadController
