--- a/Resources/config/command.yaml
+++ b/Resources/config/command.yaml
@@ -4,11 +4,11 @@ services:
         tags:
             - console.command
 
-    cdn_bundle.command.file.check:
+    bastsys.cdn_bundle.command.file.check:
         class: BastSys\CdnBundle\Command\FileCheckCommand
         arguments:
             - '@doctrine.orm.entity_manager'
-            - '@cdn_bundle.repository.file'
-            - '@cdn_bundle.file_service'
+            - '@bastsys.cdn_bundle.repository.file'
+            - '@bastsys.cdn_bundle.file_service'
 
 
